V2/readme.md
#FoodSplash

##Initial Setup
* Add Index Page
* Add restaurants Page that lists all restaurants

Each Restaurant has:
   * Name
   * Image

#Layout and Basic Styling
* Create our header and footer partials
* Add in Bootstrap

#Creating New Restaurant
* Setup new restaurant POST route
* Add in body-parser
* Setup route to show form
* Add basic unstyled form

#Style the restaurants page
* Add a better header/title
* Make restaurants display in a grid

#Style the Navbar and Form
* Add a navbar to all templates
* Style the new restaurant form

#Add Mongoose
* Install and configure Mongoose
* Setup restaurant model
* Use restaurant model inside of our routes

#Show Page
* Review the RESTful routes we've seen so far
* Add description to our restaurant model
* Add a show route/template

#Refactor Mongoose Code
* Create a models directory
* Use module.exports
* Require everything correctly!

#Add Seeds File
* Add a seeds.js file
* Run the seeds file every time the server starts

#Add the Comment model!
* Make our errors go away!
* Display comments on restaurant show page